// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`locked and unlocked snapshots matches the locked snapshot 1`] = `
<styled.button
  className="Die Die-locked"
  onClick={[Function]}
/>
`;

exports[`locked and unlocked snapshots matches the unlocked snapshot 1`] = `
<styled.button
  className="Die"
  onClick={[Function]}
/>
`;

exports[`simple snapshots matches the shallow snapshot 1`] = `
<styled.button
  className="Die"
  onClick={[Function]}
/>
`;
